test/error/PreUnknown.ci
public static class Test
{
	public static bool Run()
	{
#foo //ERROR: Unknown preprocessor directive
		return true;
	}
}
